--- a/index.html
+++ b/index.html
@@ -1,270 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Auto Video Loader</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Auto Video Loader</title>
 
-  <!-- Bootstrap -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/theme.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    
 
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
   <body>
-    <div id="carousel-container">
-      <div class="carousel-inner-container animating" style="transform: translateX(-50%);">
-        <div class="carousel-item">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-        <div class="carousel-item">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-
-        <div class="carousel-item focus">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-
-        <div class="carousel-item">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-
-        <div class="carousel-item">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
+    <div class="owl-carousel owl-theme">
+      <div class="item"><h4>1</h4></div>
+      <div class="item"><h4>2</h4></div>
+      <div class="item"><h4>3</h4></div>
+      <div class="item"><h4>4</h4></div>
+      <div class="item"><h4>5</h4></div>
+      <div class="item"><h4>6</h4></div>
+      <div class="item"><h4>7</h4></div>
+      <div class="item"><h4>8</h4></div>
+      <div class="item"><h4>9</h4></div>
+      <div class="item"><h4>10</h4></div>
+      <div class="item"><h4>11</h4></div>
+      <div class="item"><h4>12</h4></div>
+  </div>
 
 
-        <div class="carousel-item">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-
-                <iframe src="https://www.youtube.com/embed/vHPnnJ3DRfQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-
-        <div class="carousel-item">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-
-                <iframe src="https://www.youtube.com/embed/vHPnnJ3DRfQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-
-        <div class="carousel-item focus video-playing">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-
-                <iframe src="https://www.youtube.com/embed/vHPnnJ3DRfQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-
-        <div class="carousel-item">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-                <iframe src="https://www.youtube.com/embed/vHPnnJ3DRfQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-
-        <div class="carousel-item">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-
-                <iframe src="https://www.youtube.com/embed/vHPnnJ3DRfQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-
-        <div class="carousel-item">
-          <a href="" target="_blank">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-
-        <div class="carousel-item">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-
-        <div class="carousel-item focus"><a href=""><div><div class="image-container"><div class="image-hover"></div>
-          <picture>
-            <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-          </picture>
-        </div>
-        <div class="aspect-preserver"></div></div></a><div class="placeholder"></div></div>
-
-        <div class="carousel-item">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-
-        <div class="carousel-item">
-          <a href="">
-            <div>
-              <div class="image-container">
-                <div class="image-hover"></div>
-                <picture>
-                  <img alt="" class="image-shaped" src="https://i.ytimg.com/vi/vHPnnJ3DRfQ/maxresdefault.jpg">
-                </picture>
-              </div>
-              <div class="aspect-preserver"></div>
-            </div>
-          </a>
-          <div class="placeholder"></div>
-        </div>
-      </div>
-
-      <div class="carousel-inner-placeholder">
-        <div class="hold-that-place"></div>
-      </div>
-      <div class="carousel-navigation">
-        <div class="arrow-container-left">
-          <div class="prev arrow" data-slide="prev"></div>
-        </div>
-        <div class="arrow-container-right">
-          <div class="next arrow" data-slide="next"></div>
-        </div>
-      </div>
-    </div>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
+  <script>
+     
+    $('.owl-carousel').owlCarousel({
+      items:1,
+      merge:true,
+      loop:true,
+      margin:10,
+      video:true,
+      lazyLoad:true,
+      center:true,
+      responsive:{
+        0:{
+          items:1,
+          nav:true
+        },
+        600:{
+            items:3,
+            nav:false
+        }
+      }
+    });
+  </script>
   </body>
-  </html>
+</html>
