--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Auto Video Loader</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
     <link rel="stylesheet" href="css/theme.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -21,17 +21,19 @@
   </head>
   <body>
 
-    <div class="owl-carousel owl-theme">      
-      <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/6ZnfsJ6mM5c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-      <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/whZNYPldMEY?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-      <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/qs2n_poLarc?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-      <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/bKWDKmHvF78?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-      <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/T5iGAAypGBA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+    <div class="avl-carousel-container">
+
+      <div class="arrow next"></div>
+      <div class="arrow prev"></div>
+      <div class="owl-carousel owl-theme">      
+        <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/6ZnfsJ6mM5c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+        <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/whZNYPldMEY?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+        <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/qs2n_poLarc?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+        <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/bKWDKmHvF78?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+        <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/T5iGAAypGBA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+      </div>
+  
     </div>
-
-    <div class="nextBtn">Next</div>
-
-
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
@@ -57,16 +59,20 @@
             nav:false
           },
           600:{
-              items:3,
-              nav:false
+            items:3,
+            nav:false
           }
         }
       });
 
 
-      $('.nextBtn').click(function() {
+      $('.next').click(function() {
         owl.trigger('next.owl.carousel');
-      })
+      });
+
+      $('.prev').click(function() {
+        owl.trigger('prev.owl.carousel');
+      });
       
     </script>
   </body>
