--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
   </head>
   <body>
 
+
     <div class="avl-carousel-container">
 
       <div class="arrow next"></div>
       <div class="arrow prev"></div>
       <div class="owl-carousel owl-theme">      
-        <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/6ZnfsJ6mM5c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+        <div class="item"><iframe id="existing-iframe-example" width="100%" height="350" src="https://www.youtube.com/embed/6ZnfsJ6mM5c?rel=0&amp;showinfo=0&enablejsapi=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
         <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/whZNYPldMEY?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
         <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/qs2n_poLarc?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
         <div class="item"><iframe width="100%" height="350" src="https://www.youtube.com/embed/bKWDKmHvF78?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
@@ -73,7 +74,26 @@
       $('.prev').click(function() {
         owl.trigger('prev.owl.carousel');
       });
+
+      var tag = document.createElement('script');
+      tag.id = 'iframe-demo';
+      tag.src = 'https://www.youtube.com/iframe_api';
+      var firstScriptTag = document.getElementsByTagName('script')[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+      var player;
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player('existing-iframe-example', {
+            events: {
+              'onReady': onPlayerReady
+            }
+        });
+      }
       
+      function onPlayerReady(event) {
+        player.playVideo();
+      }
+
     </script>
   </body>
 </html>
